client/cli/derive/tests/ui/substrate_cli_params/unknown_attrs.stderr
error: unknown macro parameters: unknown_attr
  --> $DIR/unknown_attrs.rs:7:1
   |
7  | / #[substrate_cli_params(
8  | |     shared_params = shared,
9  | |     unknown_attr = 42,
10 | | )]
   | |__^
